--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background:#e0e0e0;
+  background:#dddddd;
   color:black;
   font-size:0.7em;
   margin:0px;
@@ -39,6 +39,7 @@ h3, .nav li {
 .svg {
   width:85%;
   margin:auto;
+  margin-bottom:-0.3em;
 }
 
 .col-4 {
@@ -63,7 +64,7 @@ h3, .nav li {
   width:85%;
   margin:auto;
   background-color:#eeeeee;
-  padding: 4em 2em 11em 2em;
+  padding: 4em 2em 6em 2em;
   /*margin: 0em 2em 7em 2em;*/
   box-sizing:border-box;
 }
@@ -74,6 +75,10 @@ h3, .nav li {
   padding-top:30vh;
   padding-bottom:30vh;
   box-sizing:border-box;
+}
+
+.row {
+  overflow:auto;
 }
 
 .nav li {
