--- a/styles.css
+++ b/styles.css
@@ -133,10 +133,10 @@ h3 {
 .skillbar {
   position:relative;
   display:block;
-  margin-bottom:15px;
+  margin-bottom:0.6em;
   width:100%;
   background:#eee;
-  height:35px;
+  height:1.5em;
   -webkit-transition:0.4s linear;
   -moz-transition:0.4s linear;
   -ms-transition:0.4s linear;
@@ -153,33 +153,38 @@ h3 {
   position:absolute;
   top:0;
   left:0;
-  width:110px;
-  font-size:13px;
+  width:7em;
+  font-size:0.8em;
   color:#ffffff;
   background:#6adcfa;
 }
 
 .skillbar-title span {
   display:block;
-  background:rgba(0, 0, 0, 0.1);
-  padding:0 20px;
-  height:35px;
-  line-height:35px;
+  background:rgba(0, 0, 0, 0.2);
+  padding:0 1em;
+  height:1.87em;
+  line-height:1.87em;
 }
 
 .skillbar-bar {
-  height:35px;
+  height:1.5em;
   width:0px;
   background:#6adcfa;
 }
 
-.skill-bar-percent {
-  position:absolute;
-  right:10px;
-  top:0;
-  font-size:11px;
-  height:35px;
-  line-height:35px;
-  color:#ffffff;
-  color:rgba(0, 0, 0, 0.4);
+.html {
+  background-color: #EC662B;
+}
+
+.css {
+  background-color: #33A9DC;
+}
+
+.jquery {
+  background-color: #0769AD;
+}
+
+.javascript {
+  background-color: #FFD83A;
 }
