--- a/styles.css
+++ b/styles.css
@@ -80,13 +80,6 @@ h3 {
   overflow:auto;
 }
 
-.skill {
-/*  border:1px solid #aaaaaa;*/
-  background-color: #dddddd;
-  margin:1%;
-  padding: 1em 0em 1em 0em;
-  line-height:1.5em;
-}
 
 .nav li {
   float:right;
@@ -100,8 +93,17 @@ h3 {
   float:left;
 }
 
-
 /*---------------------SKILL BAR---------------------*/
+
+.skill {
+  background-color: #dddddd;
+  margin:1%;
+  padding: 1em 0em 1em 0em;
+  line-height:1.5em;
+  -webkit-box-shadow: -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
+  -moz-box-shadow:    -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
+  box-shadow:         -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
+}
 
 .skill ul {
   width:90%;
@@ -126,6 +128,9 @@ h3 {
   -ms-transition-property:width, background-color;
   -o-transition-property:width, background-color;
   transition-property:width, background-color;
+  -webkit-box-shadow: -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
+  -moz-box-shadow:    -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
+  box-shadow:         -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
 }
 
 
