--- a/styles.css
+++ b/styles.css
@@ -54,18 +54,25 @@ h3 {
 .nav {
   position: fixed;
   width:98%;
-  background-color:white;
+/*  background-color:white;*/
   margin-top:0px;
   z-index:1;
+/*  -webkit-box-shadow: -1px 2px 5px 0px rgba(50, 50, 50, 0.1);
+  -moz-box-shadow:    -1px 2px 5px 0px rgba(50, 50, 50, 0.1);
+  box-shadow:         -1px 2px 5px 0px rgba(50, 50, 50, 0.1);*/
 }
 
 .topic {
-  width:85%;
+  width:90%;
   margin:auto;
   background-color:#eeeeee;
   padding: 4em 2em 4em 2em;
   /*margin: 0em 2em 7em 2em;*/
   box-sizing:border-box;
+  -webkit-box-shadow: -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
+  -moz-box-shadow:    -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
+  box-shadow:         -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
+  margin-bottom:3em;
 }
 
 .landing {
@@ -95,7 +102,7 @@ h3 {
 
 /*---------------------SKILL BAR---------------------*/
 
-.skill {
+.backing {
   background-color: #dddddd;
   margin:1%;
   padding: 1em 0em 1em 0em;
