--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,10 @@ ul {
   list-style-type:none;
 }
 
+h1 {
+  text-shadow: -2px 3px 3px rgba(150, 150, 150, 0.5);
+}
+
 h1, h2 {
   font-weight:normal;
   font-size:5em;
