--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,25 @@ p {
   font-size: 0.8em;
 }
 
+a {
+  text-decoration:none;
+  color:black;
+}
+
+a:visited {
+  color:black;
+}
+
+a:hover {
+  font-size:1.2em;
+  -webkit-transition:0.4s ease;
+  -moz-transition:0.4s ease;
+  -ms-transition:0.4s ease;
+  -o-transition:0.4s ease;
+  transition:0.4s ease;
+  border-bottom:3px solid black;
+}
+
 ul {
   list-style-type:none;
 }
@@ -65,12 +84,8 @@ h3 {
   position: fixed;
   width:98%;
   background-color: rgba(204, 204, 204, 0.9);
-/*  background-color:white;*/
   margin-top:0px;
   z-index:1;
-/*  -webkit-box-shadow: -1px 2px 5px 0px rgba(50, 50, 50, 0.1);
-  -moz-box-shadow:    -1px 2px 5px 0px rgba(50, 50, 50, 0.1);
-  box-shadow:         -1px 2px 5px 0px rgba(50, 50, 50, 0.1);*/
 }
 
 .topic {
