--- a/styles.css
+++ b/styles.css
@@ -33,9 +33,8 @@ a:hover {
 a:hover.image{
   border-bottom:none;
   font-size:1em;
-  -webkit-filter: brightness(105%); /* Safari */
-  filter: brightness(105%);
-
+  -webkit-filter: drop-shadow(-1px 2px 2px grey);
+  filter: drop-shadow(-1px 2px 2px grey);
 }
 
 ul {
