--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,10 @@ a:hover.image{
   filter: drop-shadow(-1px 2px 2px grey);
 }
 
+a.textLink {
+  color:#1D8B37;
+}
+
 ul {
   list-style-type:none;
 }
@@ -66,6 +70,9 @@ h3, .nav li {
 
 h3 {
   text-align: center;
+}
+
+.container {
 }
 
 #me {
