--- a/styles.css
+++ b/styles.css
@@ -109,10 +109,20 @@ h3 {
   background-color: rgba(204, 204, 204, 0.9);
   margin-top:0px;
   z-index:1;
+  -webkit-transition:0.4s ease;
+  -moz-transition:0.4s ease;
+  -ms-transition:0.4s ease;
+  -o-transition:0.4s ease;
+  transition:0.4s ease;
 }
 
 .light-nav {
-  background-color: rgba(255,255,255,0.9);
+  background-color: rgba(255,255,255,0.85);
+  padding:0.2em 0em 0.2em 0em;
+  width:100%;
+  -webkit-box-shadow: -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
+  -moz-box-shadow:    -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
+  box-shadow:         -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
 }
 
 .topic {
