--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
   color:black;
   font-size:0.7em;
   margin:0px;
+  font-weight:300;
 }
 
 p {
@@ -39,6 +40,7 @@ a:visited {
   transition:0.3s ease;
   padding-bottom:1em;
   border-bottom:3px solid black;
+  font-weight:500;
 }
 
 a:hover.image{
@@ -90,6 +92,7 @@ h2 {
 
 h3, .nav li {
   font-family: 'Roboto', sans-serif;
+  font-weight:300;
   letter-spacing: 0.15em;
   text-transform:uppercase;
 }
@@ -134,7 +137,7 @@ h3 {
 }
 
 .light-nav {
-  background-color: rgba(255,255,255,0.85);
+  background-color: rgba(255,255,255,1);
   padding:0.1em 0em 0.1em 0em;
   width:100%;
   -webkit-box-shadow: -1px 2px 5px 0px rgba(50, 50, 50, 0.23);
