--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,10 @@ body {
 }
 
 p {
-  font-family: 'Arial', sans-serif;
-  letter-spacing: 0.1em;
-  font-size: 0.8em;
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 0.05em;
+  font-size: 0.75em;
+  line-height: 2em;
 }
 
 a {
